<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/statsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FAFAFA">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lernstatistik"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:gravity="center" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zurück"
        android:layout_gravity="start"
        android:layout_marginTop="12dp"/>


    <ToggleButton
        android:id="@+id/toggleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="Woche"
        android:textOff="Heute"
        android:layout_gravity="center"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/todayStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Heute: 0 Minuten"
        android:textSize="18sp"
        android:textColor="#555555"
        android:layout_marginTop="20dp"
        android:gravity="center" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp" />
</LinearLayout>
